--- a/.gitignore
+++ b/.gitignore
@@ -261,3 +261,6 @@ paket-files/
 # Python Tools for Visual Studio (PTVS)
 __pycache__/
 *.pyc
+/summer-project/calibrationfolder
+/summer-project/randomPattern
+/summer-project/set1
